--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         "title":"နောက်လအတွက်promotio😽",
         "date":"SET 13",
         "img":"https://drive.google.com/uc?export=download&id=1aCUuG6kyVL5Yk56VcAEP_2yxOqCR4sk_",
-        "content":".Smile4U Myanmar ဖွင့်ပွဲမှာ ကျပ်သိန်း (၁၀၀) အထိရယူလိုက်ပါ။"
+        "content":".Smile4U Myanmar ဖွင့်ပွဲမှာ ကျပ်သိန်း (၁၀၀) အထိရယူလိုက်ပါ။Content is also the things represented or suggested in something written or created as art, or the ideas it communicates. content noun [U] (AMOUNT)."
      },
      {
         "title":"Covidတိုက်ဖျက်ရင်းငွေစု😚",
